--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="main flex justify-center items-center h-screen">
         <div class="calculator bg-[#f1f2f3] w-[19rem] h-[93vh] rounded-2xl">
         <div class="content pt-20 px-4">
-            <h1 class="text-right text-6xl text-gray-700" id="display">0</h1>
-            <p class="text-gray-400 text-right pt-2 text-xl">0</p>
+            <h1 class="text-right text-6xl text-gray-700" >0</h1>
+            <p class="text-gray-400 text-right pt-2 text-xl" id="display">0</p>
             <div class="btn flex flex-wrap justify-between gap-4 gap-y-2">
-            <button class="text-gray-400  text-lG shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" > AC</button>
+            <button class="text-gray-400  text-lG shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" onclick="clearDisplay()"> AC</button>
             <button class="text-gray-400  text-lg font-semibold shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" onclick="clearDisplay()"><img src="/Images/cross.png" alt=""></button>
             <button class="text-gray-400  text-lG font-semibold shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" oncanplay="appendOperator('%')" > %</button>
             <button class="text-gray-400  text-lG font-semibold shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" >/</button>
