--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <p class="text-gray-400 text-right pt-2 text-xl" id="display">0</p>
             <div class="btn flex flex-wrap justify-between gap-4 gap-y-2">
             <button class="text-gray-400  text-lG shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" onclick="clearDisplay()"> AC</button>
-            <button class="text-gray-400  text-lg font-semibold shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" onclick="clearDisplay()"><img src="/Images/cross.png" alt=""></button>
-            <button class="text-gray-400  text-lG font-semibold shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" oncanplay="appendOperator('%')" > %</button>
+            <button class="text-gray-400  text-lg font-semibold shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" onclick="DelNumber()"><img src="/Images/cross.png" alt=""></button>
+            <button class="text-gray-400  text-lG font-semibold shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" onclick="appendOperator('%')" > %</button>
             <button class="text-gray-400  text-lG font-semibold shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" >/</button>
             <button class="text-gray-400  text-lG shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" onclick="appendNumber('7')" > 7</button>
             <button class="text-gray-400  text-lG shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;"   onclick="appendNumber('8')"> 8</button>
@@ -30,7 +30,7 @@
             <button class="text-gray-400  text-lG shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;"  onclick="appendNumber('1')">1</button>
             <button class="text-gray-400  text-lg shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;"  onclick="appendNumber('2')">2</button>
             <button class="text-gray-400  text-lG shadow-2xl p-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" onclick="appendNumber('3')">3</button>
-            <button class="text-gray-400  text-lG font-semibold shadow-2xl px-4 py-2 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" >+</button>
+            <button class="text-gray-400  text-lG font-semibold shadow-2xl px-4 py-2 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" onclick="appendOperator('+')">+</button>
             <button class="text-gray-400  text-lG shadow-2xl px-4 py-2 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" onclick="appendNumber('0')"> 0</button>
             <button class="text-gray-400 font-semibold text-lG shadow-2xl px-4 py-4 rounded-lg w-[3.3rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" >.</button>
             <button class="text-white font-semibold  text-lG shadow-2xl bg-orange-400 px-4 py-3 rounded-lg w-[7.5rem]" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" onclick="calculateResult()" >=</button>
